// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Segment Molecule tests should render Segment correctly 1`] = `
<DocumentFragment>
  .c2 {
  height: 1.5rem;
  width: 1.5rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c3 {
  color: #000000;
  font-size: 1.5rem;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #EEEEEE;
  height: 2.25rem;
  border-radius: 0.25rem;
  padding: 0.25rem;
}

.c1 {
  border: none;
  background-color: transparent;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 0 0;
  -ms-flex: 1 0 0;
  flex: 1 0 0;
  height: 100%;
  padding: 0 0.75rem;
  z-index: 1;
  border-radius: 0.25rem;
  -webkit-transition: background-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out;
}

.c1:hover:not(.active) {
  background-color: #E2E2E2;
}

.c4 {
  position: absolute;
  inset: 0.25rem;
  pointer-events: none;
  z-index: 0;
}

.c4::before {
  position: absolute;
  content: "";
  left: 0;
  top: 0;
  bottom: 0;
  background-color: #FFFFFF;
  width: calc((100% / 2));
  border-radius: 0.25rem;
  box-shadow: rgba(0,0,0,0.1) 0px 1px 3px 0px,rgba(0,0,0,0.06) 0px 1px 2px 0px;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: translateX(0%);
  -ms-transform: translateX(0%);
  transform: translateX(0%);
}

<div
    class="c0"
    data-testid="segment-component"
  >
    <button
      class="c1 active"
      data-testid="segment-button"
    >
      <div
        class="c2"
        data-testid="icon-container"
        size="24"
      >
        <span
          class="c3 material-symbols-sharp"
          color="#000000"
          data-testid="icon"
          size="24"
        >
          view_module
        </span>
      </div>
    </button>
    <button
      class="c1"
      data-testid="segment-button"
    >
      <div
        class="c2"
        data-testid="icon-container"
        size="24"
      >
        <span
          class="c3 material-symbols-sharp"
          color="#000000"
          data-testid="icon"
          size="24"
        >
          view_stream
        </span>
      </div>
    </button>
    <div
      class="c4"
    />
  </div>
</DocumentFragment>
`;

exports[`Segment Molecule tests should render Segment with icons and test 1`] = `
<DocumentFragment>
  .c4 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: 400;
  margin-left: 0.25rem;
  font-family: 'Roboto',sans-serif;
  color: #000000;
}

.c2 {
  height: 1.5rem;
  width: 1.5rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c3 {
  color: #000000;
  font-size: 1.5rem;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #EEEEEE;
  height: 2.25rem;
  border-radius: 0.25rem;
  padding: 0.25rem;
}

.c1 {
  border: none;
  background-color: transparent;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 0 0;
  -ms-flex: 1 0 0;
  flex: 1 0 0;
  height: 100%;
  padding: 0 0.75rem;
  z-index: 1;
  border-radius: 0.25rem;
  -webkit-transition: background-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out;
}

.c1:hover:not(.active) {
  background-color: #E2E2E2;
}

.c5 {
  position: absolute;
  inset: 0.25rem;
  pointer-events: none;
  z-index: 0;
}

.c5::before {
  position: absolute;
  content: "";
  left: 0;
  top: 0;
  bottom: 0;
  background-color: #FFFFFF;
  width: calc((100% / 2));
  border-radius: 0.25rem;
  box-shadow: rgba(0,0,0,0.1) 0px 1px 3px 0px,rgba(0,0,0,0.06) 0px 1px 2px 0px;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: translateX(0%);
  -ms-transform: translateX(0%);
  transform: translateX(0%);
}

<div
    class="c0"
    data-testid="segment-component"
  >
    <button
      class="c1 active"
      data-testid="segment-button"
    >
      <div
        class="c2"
        data-testid="icon-container"
        size="24"
      >
        <span
          class="c3 material-symbols-sharp"
          color="#000000"
          data-testid="icon"
          size="24"
        >
          view_module
        </span>
      </div>
      <p
        class="c4"
      >
        Item 1
      </p>
    </button>
    <button
      class="c1"
      data-testid="segment-button"
    >
      <div
        class="c2"
        data-testid="icon-container"
        size="24"
      >
        <span
          class="c3 material-symbols-sharp"
          color="#000000"
          data-testid="icon"
          size="24"
        >
          view_stream
        </span>
      </div>
      <p
        class="c4"
      >
        Item 2
      </p>
    </button>
    <div
      class="c5"
    />
  </div>
</DocumentFragment>
`;
